terraform/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
      annotations:
        alb.ingress.kubernetes.io/backend-protocol: HTTPS
        alb.ingress.kubernetes.io/group.name: dev
        alb.ingress.kubernetes.io/group.order: "4"
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
        kubernetes.io/ingress.class: alb
      labels:
        prod: argocd
      name: argocd
      namespace: argocd
spec:
      rules:
        - host: argocd.tikaldev.click
          http:
            paths:
              - backend:
                  service: 
                    name: argo-cd-argocd-server
                    port: 
                      number: 80
                path: /
                pathType: Prefix
